# neutherm-pinn

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: default.yaml
neutherm/: __init__.py
neutherm/evaluation/: __init__.py  compare.py  metrics.py
neutherm/models/: __init__.py  pinn.py  surrogate.py
neutherm/physics/: __init__.py  cross_sections.py  fuel_properties.py  parameters.py
neutherm/solvers/: __init__.py  coupled_solver.py  diffusion_solver.py  thermal_solver.py
neutherm/training/: __init__.py  dataset.py  losses.py  train_pinn.py  train_surrogate.py
notebooks/: 01_walkthrough.ipynb
tests/: test_physics.py
